Fix owa-[...-]logo.svg width/height, alignmment. Addresses https://github.com/OpenWebAdvocacy/website/pull/33#discussion_r957588707

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -489,7 +489,10 @@ p.logo-home {
 	max-width: 100px;
 }
 
-	p.logo-home img {vertical-align: bottom;}
+	p.logo-home img {
+    height: auto;
+    vertical-align: bottom;
+  }
 
 div.home-wrapper {
 	width: 90%;
